--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,15 @@ header{
 .container{
     max-width: 1200px;
     margin: 0 auto;
+    padding-top: 40px;
     height: 600px;
     border: 2px solid black;
 }
+
+.title-header{
+    font-size: 60px;
+}
+
 
 
 
