--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ header{
 /* button uitility finish */
 
 .container{
-    width: 1250px;
+    max-width: 1250px;
     height: 600px;
     margin: 0 auto;
     padding-top: 40px;
@@ -115,6 +115,32 @@ header{
     height: 450px;
 }
 
+/* start Main-Box1 */
+.box.dropbox-business{
+    margin: 0 auto;
+    padding-top: 150px;
+    max-width: 1100px;
+    border: 2px solid black;
+}
+
+.title-dropbox{
+    width: 100%;
+    height: 100px;
+    background-color: darksalmon;
+}
+
+.section{
+    width: calc(100% / 3);
+    height: 500px;
+    background-color:forestgreen;
+    border: 2px solid black;
+}
+
+.itemp{
+    width: 100%;
+    height: 100%;
+    background-color: gold;
+}
 
 
 
