--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ header{
 }
 
 .fl{
-    float: left;;
+    float: left;
 }
 
 .logo{
@@ -52,12 +52,7 @@ header{
     display: inline-block;
 }
 
-.logo{
-    padding-top: 10px;
-}
-
 .question li, .login li{
-    padding-top: 15px;
     margin-right: 25px;
 }
 
@@ -91,6 +86,19 @@ header{
     font-size: 14px;
     margin-bottom: 15px;
 }
+
+.office-contact {
+    width: 100%;
+    background-color: #0061ff;
+    color: white;
+    border: none;
+    padding: 10px 12px;
+}
+
+.partner-search{
+    padding: 7px 14px;
+    border: 1px solid black;
+}
 /* button uitility finish */
 
 .container{
@@ -115,17 +123,26 @@ header{
     font-size: 12px;
 }
 
+.left-container{
+    height: 300px;
+    width: 350px;
+    padding-top: 30px;
+    line-height: 25px;
+}
+
 .picture-container.fl img{
     margin:20px 0 0 50px;
     width: 850px;
     height: 450px;
+    line-height: 25px;
 }
 
 /* start Main-Box1 */
-.box.dropbox-business{
+.box.dropbox{
     margin: 0 auto;
     padding-top: 150px;
     max-width: 1100px;
+    background-color:palegreen
 }
 
 .title-dropbox > h2{
@@ -143,13 +160,13 @@ header{
 
 .title-dropbox, .enterprise-contact {
     width: 100%;
-    /* background-color: darksalmon; */
 }
 
 .section{
     width: calc(100% / 3 );
     padding: 30px 0;
-    height: 900px;
+    height: 1000px;
+    line-height: 25px;
     /* background-color:forestgreen; */
 }
 
@@ -211,6 +228,67 @@ header{
 .offers span{
     color: royalblue;
 }
+
+.enterprise-contact{
+    height: 250px;
+    border: 1px solid black;
+}
+
+.team.intern-down{
+    width: 100%;
+    height: 40px;
+    border-bottom: 1px solid black;
+    text-align: center;
+    line-height: 30px;
+}
+
+.voices{
+    padding: 30px 30px;
+}
+
+.voices.l{
+    width: 70%;
+}
+
+.voices.r{
+    width: 30%;
+}
+/* finish Main-Box1*/
+
+.picture-2{
+    width: 50%;
+}
+
+.picture-2 img{
+    max-width: 100%;
+}
+
+.text-2{
+    width: 50%;
+    padding: 140px 100px;
+    line-height: 25px;
+    /* background-color:darkolivegreen */
+}
+
+/* start box with 6 floats */
+
+.titl-operations{
+    background-color: orange;
+    font-size: 32px;
+}
+
+.actions{
+    width: calc(100% / 3 - 30px );
+    height: 400px;
+    border: 2px solid black;
+    margin-top: 30px;
+}   
+
+.actions.centr{
+     margin: 30px 30px 0 30px;
+}
+
+
 
 
 
