--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,12 @@ header{
     float: left;
 }
 
+nav > ul{
+    height: 35px;
+    line-height: 25px;
+    padding-top: 10px;
+}
+
 .logo{
     /* background-color: coral; */
     width: 10%; 
@@ -142,7 +148,7 @@ header{
     margin: 0 auto;
     padding-top: 150px;
     max-width: 1100px;
-    background-color:palegreen
+    /* background-color:palegreen */
 }
 
 .title-dropbox > h2{
@@ -273,19 +279,27 @@ header{
 /* start box with 6 floats */
 
 .titl-operations{
-    background-color: orange;
+    /* background-color: orange; */
     font-size: 32px;
 }
 
 .actions{
-    width: calc(100% / 3 - 30px );
-    height: 400px;
-    border: 2px solid black;
-    margin-top: 30px;
+    width: calc(100% / 3 - 20px );
+    height: 500px;
+    margin-top: 70px;
+    /* border: 1px solid black; */
 }   
 
 .actions.centr{
-     margin: 30px 30px 0 30px;
+     margin: 70px 30px 0 30px;
+}
+
+.picture-actions img{
+    max-width: 100%;
+}
+
+.explain-actions{
+    margin-top: 20px;
 }
 
 
