--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,22 @@ header{
     clear: both;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
+.bottom-menu.column a{
+    color: white;
+}
+
+.test-days span a{
+    text-decoration: underline;
+    color: #0061ff;
+}
+
+
+
 /* NAVIGATION START */
 
 .top-bar.clearfix{
@@ -39,23 +55,21 @@ nav > ul{
 }
 
 .logo{
-    /* background-color: coral; */
     width: 10%; 
 }
 
 .question{
-    /* background-color: darkgoldenrod; */
     width: 40%;
 }
 
 .login{
-    /* background-color: chocolate; */
     width: 50%;
     text-align: right;
 }
 
 li{
     list-style: none;
+    cursor: pointer;
 }
 
 .part.fl li{
@@ -73,6 +87,7 @@ li{
     background-color: #0061ff;
     color: white;
     border: none;
+    cursor: pointer;
 }
 
 .button.start{
@@ -177,7 +192,6 @@ li{
     padding: 30px 0;
     height: 1000px;
     line-height: 25px;
-    /* background-color:forestgreen; */
 }
 
 .section.lf{
@@ -204,11 +218,9 @@ li{
     width: 100%;
     height: 60px;
     border-bottom: 1px solid black;
-}
-
-.intern h4{
     text-align: center;
     line-height: 60px;
+    font-weight: 700;
 }
 
 .contenuto{
@@ -291,11 +303,15 @@ li{
     width: calc(100% / 3 - 20px );
     height: 500px;
     margin-top: 70px;
-    /* border: 1px solid black; */
 }   
 
 .actions.centr{
      margin: 70px 30px 0 30px;
+}
+
+.picture-actions{
+    width: 100%;
+    text-align: left;
 }
 
 .picture-actions img{
@@ -412,12 +428,16 @@ li{
 .box-azienda{
     background-color: #b4d0e7;
     height: 300px;
+    position: relative;
 }
 
 .box-azienda-inside{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 1100px;
     margin: 0 auto;
-    padding-top: 100px;
 }
 
 .azienda-part.one{
@@ -483,6 +503,7 @@ footer{
     font-size: 14px;
     padding-bottom: 100px;
 }
+ 
 
 .column-list{
     padding-top: 10px;
